add map demo in c++17 style

--- a/cpp/cpp17indetail/src/0_quick_start/CmakeLists.txt
+++ b/cpp/cpp17indetail/src/0_quick_start/CmakeLists.txt
@@ -1,1 +1,2 @@
-add_executable(0_map map.cpp)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/0_quick_start)
+add_executable(map_demo map_demo.cpp)
