--- a/cpp/cpp17indetail/src/0_quick_start/CmakeLists.txt
+++ b/cpp/cpp17indetail/src/0_quick_start/CmakeLists.txt
@@ -1,2 +1,3 @@
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/0_quick_start)
 add_executable(map_demo map_demo.cpp)
+add_executable(print_demo print_demo.cpp)
