play with cmake groups

--- a/cpp/cpp17indetail/src/0_quick_start/CmakeLists.txt
+++ b/cpp/cpp17indetail/src/0_quick_start/CmakeLists.txt
@@ -1,3 +1,15 @@
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/0_quick_start)
-add_executable(map_demo map_demo.cpp)
-add_executable(print_demo print_demo.cpp)
+
+file(GLOB_RECURSE SRC_MAP
+    "map_demo.cpp"
+)
+
+source_group("Map"            FILES ${SRC_MAP})
+add_executable(map_demo ${SRC_MAP})
+
+file(GLOB_RECURSE SRC_PRINT
+    "print_demo.cpp"
+)
+
+source_group("Print"            FILES ${SRC_PRINT})
+add_executable(print_demo ${SRC_PRINT})
