add static assert with no message example

--- a/cpp/cpp17indetail/src/1_fixes_and_deprecations/CMakeLists.txt
+++ b/cpp/cpp17indetail/src/1_fixes_and_deprecations/CMakeLists.txt
@@ -1,2 +1,3 @@
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/1_fixes_and_deprecations)
 add_executable(direct-list-initialisation "direct-list-initialisation.cpp")
+add_executable(silent_assert "silent_assert.cpp")
