--- a/cpp/cpp17indetail/src/1_fixes_and_deprecations/CMakeLists.txt
+++ b/cpp/cpp17indetail/src/1_fixes_and_deprecations/CMakeLists.txt
@@ -5,3 +5,4 @@ add_executable(for_range_loop_14_1 "for_range_loop_14_1.cpp")
 add_executable(for_range_loop_17_1 "for_range_loop_17_1.cpp")
 add_executable(for_range_loop_17_2 "for_range_loop_17_2.cpp")
 add_executable(for_range_loop_17_3 "for_range_loop_17_3.cpp")
+add_executable(for_loop_examples "for_loop_examples.cpp")
