--- a/cpp/cpp17indetail/src/2_language_clarification/CMakeLists.txt
+++ b/cpp/cpp17indetail/src/2_language_clarification/CMakeLists.txt
@@ -1,3 +1,4 @@
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/2_language_clarification)
 add_executable(evaluation_order "evaluation_order.cpp")
 add_executable(copy_elision "copy_elision.cpp")
+add_executable(copy_elision_non_movable "copy_elision_non_movable.cpp")
