add noexcept examples, add structured bindings skeleton

--- a/cpp/cpp17indetail/src/2_language_clarification/CMakeLists.txt
+++ b/cpp/cpp17indetail/src/2_language_clarification/CMakeLists.txt
@@ -1,4 +1,8 @@
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/2_language_clarification)
 add_executable(evaluation_order "evaluation_order.cpp")
-add_executable(copy_elision "copy_elision.cpp")
+add_executable(copy_elision14 "copy_elision.cpp")
+#string(REPLACE "/O2" "/O0" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
+set_target_properties(copy_elision14 PROPERTIES CXX_STANDARD 14 CXX_EXTENSIONS OFF CXX_FLAGS -fno-elide-constructors)
+add_executable(copy_elision17 "copy_elision.cpp")
 add_executable(copy_elision_non_movable "copy_elision_non_movable.cpp")
+#add_executable(exceptions "exceptions.cpp")
