--- a/cpp/cpp17indetail/src/CmakeLists.txt
+++ b/cpp/cpp17indetail/src/CmakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory("0_quick_start")
 add_subdirectory("1_fixes_and_deprecations")
 add_subdirectory("2_language_clarification")
+add_subdirectory("3_general_features")
