--- a/cpp/cpp17indetail/src/3_general_features/CMakeLists.txt
+++ b/cpp/cpp17indetail/src/3_general_features/CMakeLists.txt
@@ -1,2 +1,3 @@
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/3_general_features)
 add_executable(structured_bindings "structured_bindings.cpp")
+add_executable(structured_bindings_custom "structured_bindings_custom.cpp")
