add example of inline variables

--- a/cpp/cpp17indetail/src/3_general_features/CMakeLists.txt
+++ b/cpp/cpp17indetail/src/3_general_features/CMakeLists.txt
@@ -2,3 +2,4 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/3_general_f
 add_executable(structured_bindings "structured_bindings.cpp")
 add_executable(structured_bindings_custom "structured_bindings_custom.cpp")
 add_executable(init_if_and_switch "init_if_and_switch.cpp")
+add_executable(inline_var "inline_var.cpp")
