--- a/cpp/cpp17indetail/src/3_general_features/CMakeLists.txt
+++ b/cpp/cpp17indetail/src/3_general_features/CMakeLists.txt
@@ -3,3 +3,5 @@ add_executable(structured_bindings "structured_bindings.cpp")
 add_executable(structured_bindings_custom "structured_bindings_custom.cpp")
 add_executable(init_if_and_switch "init_if_and_switch.cpp")
 add_executable(inline_var "inline_var.cpp")
+add_executable(lambda_constexpr "lambda_constexpr.cpp")
+add_executable(nested_ns "nested_ns.cpp")
