add template deduction guides examples

--- a/cpp/cpp17indetail/src/4_templates/CMakeLists.txt
+++ b/cpp/cpp17indetail/src/4_templates/CMakeLists.txt
@@ -1,14 +1,15 @@
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/4_templates)
-# add_executable(structured_bindings "structured_bindings.cpp")
+add_executable(deduction "deduction.cpp")
 
 
 if(NOT TARGET 4_templates)
     add_custom_target(4_templates)
-    # add_dependencies(4_templates nested_ns)
+    add_dependencies(4_templates deduction)
 endif()
 
 set_target_properties (
     4_templates
+    deduction
     PROPERTIES
     FOLDER 4_templates
 )
