--- a/python-ray/Vagrantfile
+++ b/python-ray/Vagrantfile
@@ -8,6 +8,7 @@ NODE_CPU    = 2
 NODE_RAM    = 2048
 
 Vagrant.configure(2) do |config|
+    # Disable SSH key generation.
     config.ssh.insert_key = false
     (1..NODE_COUNT).each do |i|
         config.vm.define "raynode#{i}" do |node|
