--- a/python-ray/Vagrantfile
+++ b/python-ray/Vagrantfile
@@ -65,15 +65,29 @@ Vagrant.configure(2) do |config|
                 # dnf config-manager --set-enabled PowerTools
                 dnf -y update
                 dnf -y groupinstall 'Development Tools'
+                dnf -y install bzip2-devel
+                dnf -y install htop
                 dnf -y install libcurl-devel
+                dnf -y install libffi-devel
                 dnf -y install openssl-devel
-                dnf -y install python3
                 dnf -y install wget
+                dnf -y install xz-devel
                 # systemctl stop firewalld
                 # systemctl disable firewalld
                 # systemctl mask --now firewalld
-                alternatives --set python /usr/bin/python3
-                alternatives --auto python
+                cd /tmp
+                wget https://www.python.org/ftp/python/3.8.5/Python-3.8.5.tgz
+                tar xvf Python-3.8.5.tgz
+                cd Python-3.8*/
+                ./configure --prefix=/usr --enable-optimizations
+                sudo make altinstall
+                ln -fs /usr/bin/2to3-3.8 2to3
+                ln -fs /usr/bin/easy_install-3.8 easy_install
+                ln -fs /usr/bin/idle3.8 idle
+                ln -fs /usr/bin/pip3.8 pip
+                ln -fs /usr/bin/pydoc3.8 pydoc
+                ln -fs /usr/bin/python3.8 python
+                ln -fs /usr/bin/python3.8-config python-config
             SHELL
 
             # Mounts
