--- a/python-ray/Vagrantfile
+++ b/python-ray/Vagrantfile
@@ -70,24 +70,26 @@ Vagrant.configure(2) do |config|
                 dnf -y install libcurl-devel
                 dnf -y install libffi-devel
                 dnf -y install openssl-devel
+                dnf -y install python38
+                dnf -y install rsync
                 dnf -y install wget
                 dnf -y install xz-devel
-                # systemctl stop firewalld
-                # systemctl disable firewalld
-                # systemctl mask --now firewalld
-                cd /tmp
-                wget https://www.python.org/ftp/python/3.8.5/Python-3.8.5.tgz
-                tar xvf Python-3.8.5.tgz
-                cd Python-3.8*/
-                ./configure --prefix=/usr --enable-optimizations
-                sudo make altinstall
-                ln -fs /usr/bin/2to3-3.8 2to3
-                ln -fs /usr/bin/easy_install-3.8 easy_install
-                ln -fs /usr/bin/idle3.8 idle
-                ln -fs /usr/bin/pip3.8 pip
-                ln -fs /usr/bin/pydoc3.8 pydoc
-                ln -fs /usr/bin/python3.8 python
-                ln -fs /usr/bin/python3.8-config python-config
+                systemctl stop firewalld
+                systemctl disable firewalld
+                systemctl mask --now firewalld
+                # cd /tmp
+                # wget https://www.python.org/ftp/python/3.8.5/Python-3.8.5.tgz
+                # tar xvf Python-3.8.5.tgz
+                # cd Python-3.8*/
+                # ./configure --prefix=/usr --enable-optimizations
+                # sudo make altinstall
+                # ln -fs /usr/bin/2to3-3.8 /usr/bin/2to3
+                # ln -fs /usr/bin/easy_install-3.8 /usr/bin/easy_install
+                # ln -fs /usr/bin/idle3.8 /usr/bin/idle
+                # ln -fs /usr/bin/pip3.8 /usr/bin/pip
+                # ln -fs /usr/bin/pydoc3.8 /usr/bin/pydoc
+                # ln -fs /usr/bin/python3.8 /usr/bin/python
+                # ln -fs /usr/bin/python3.8-config /usr/bin/python-config
             SHELL
 
             # Mounts
